--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,120 @@
-/* место для вашего кода */
+.header{
+    display: grid;
+    grid-template-columns: 390px 206px 148px 355px 240px;
+    align-items: center;
+    padding: 92px 49px 92px 51px; 
+}
+.header__menu-list{
+    color: #000;
+    padding: 43px 0 45px 0;
+    display: flex;
+    justify-content: start;
+    gap:32px;
+    text-underline-position: under;
+}
+.header__menu-item{
+    list-style-type: circle;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+li::marker{
+    width: 7px;
+    height: 7px;
+}
+.header__links-list-item_no-bullit{
+    list-style-type: none;
+}
+.header__logo{
+    display: grid;
+    grid-column: 3 / 4;
+}
+.header__logo-image{
+    width: 148px;
+    height: 105px;
+}
+.header_address{
+    display: grid;
+    grid-column: 5/6;
+}
+.content_address{
+    color: #000;
+    font-family: Raleway;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 24.3px;
+}
+.content_address_links{
+    color: #000;
+    font-family: Raleway;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 24.3px;
+    text-underline-position: under;
+    
+}
+.cover{
+    min-height: 750px;
+    width: 1440px;
+    padding: 165px 50px 180px 62px;
+    background-image: url(../images/cover.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
+    z-index: -1;
+}
+.overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.6;
+    background-color: #000000;
+}
+.cover__title{
+    z-index: 1;
+    color: #FFF;
+    position: relative;
+}
+.letters{
+    font-size: 100px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 115%; /* 115px */
+    letter-spacing: 30px;
+    text-transform: uppercase;
+}
+.space_between_letters{
+    letter-spacing: 60px;
+}
+.accent-span{
+    display: block;
+}
+.text-center{
+    text-align: center;
+}
+.text-right{
+    text-align: end;
+}
+.right{
+    font-size: 100px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 115%; /* 115px */
+    text-transform: uppercase;
+    position: relative;
+    padding-top: 10px;
+    right: 40px;
+    bottom: 10px;
+    left: 10px;
+}
+.left{
+    font-size: 100px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 115%; /* 115px */
+    text-transform: uppercase;
+}
