--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,15 @@
+main{
+    width: 100%;
+    height: 2643px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .header{
     display: grid;
     grid-template-columns: 390px 206px 148px 355px 240px;
     align-items: center;
+    justify-content: center;
     padding: 92px 49px 92px 51px; 
 }
 .header__menu-list{
@@ -37,32 +45,33 @@ li::marker{
 .header_address{
     display: grid;
     grid-column: 5/6;
+    font-style: normal;
+    font-size: 18px;
+    line-height: 24.3px;
+    font-weight: 400;
 }
 .content_address{
     color: #000;
-    font-family: Raleway;
+   
     font-size: 18px;
     font-weight: 400;
     line-height: 24.3px;
 }
 .content_address_links{
     color: #000;
-    font-family: Raleway;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 24.3px;
     text-underline-position: under;
-    
+
 }
 .cover{
-    min-height: 750px;
+    position: relative;
+    z-index: -1;
+    height: 755px;
     width: 1440px;
-    padding: 165px 50px 180px 62px;
+    padding: 165px 50px 50px 50px;
     background-image: url(../images/cover.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    position: relative;
-    z-index: -1;
+   
 }
 .overlay{
     position: absolute;
@@ -71,24 +80,21 @@ li::marker{
     z-index: 0;
     width: 100%;
     height: 100%;
-    opacity: 0.6;
-    background-color: #000000;
+    background: rgba(0, 0, 0, 0.60);
 }
 .cover__title{
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
     z-index: 1;
+    letter-spacing: 30px;
     color: #FFF;
     position: relative;
-}
-.letters{
     font-size: 100px;
     font-style: normal;
     font-weight: 700;
-    line-height: 115%; /* 115px */
-    letter-spacing: 30px;
+    line-height: 115%; 
     text-transform: uppercase;
-}
-.space_between_letters{
-    letter-spacing: 60px;
 }
 .accent-span{
     display: block;
@@ -97,24 +103,233 @@ li::marker{
     text-align: center;
 }
 .text-right{
-    text-align: end;
+    line-height: 1;
+    text-align: right;
 }
-.right{
-    font-size: 100px;
+.no-letter-spacing {
+    letter-spacing: normal;
+}
+.remove-spacing {
+    letter-spacing: normal;
+  }
+.letter-spacing{
+    letter-spacing: 60px;
+}
+.cover__description{
+    padding: 137px 0  0;
+    position: relative;
+    z-index: 1;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    gap: 78px;
+    color: #FFF;
+    font-size: 22px;
+    font-weight: 400;
+    text-transform: uppercase;
+    
+}
+.cover__description-text{
+    line-height: 28px;
+    font-style: normal;
+    align-items: end;
+}
+span.words1 {
+    word-spacing: 17px;
+   }
+span.words2{
+    word-spacing: 17px;
+}
+span.words4{
+    word-spacing: 23px;
+}
+.bet-button{
+    min-width: 250px;
+    padding: 12px 32px;
+    border: 1px solid #FFF;
+    background-color: transparent;
+    color: #FFF;
+    font-family: inherit;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-transform: uppercase; 
+}
+.lots{
+    padding: 181px 0 0 0;
+
+}
+.lots__heading{
+    padding: 0 0 27px 40px;
+    color: #000;
+    font-size: 40px;
+    font-weight: 700;
+    line-height: normal;
+    text-transform: uppercase;
+}
+.lots__card-list{
+    list-style-type: none;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 25px;
+}
+.lots__card-list-item{
+    display: flex;
+    flex-grow: 1;
+    width: 430px;
+    min-height: 400px;
+}
+.card-link{
+    display: block;
+    text-decoration: none;
+    height: 100%;
+}
+.card{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    justify-content: space-between;
+    padding: 50px 40px;
+    height: 100%;
+}
+.card_type_film{
+    background-image: url(../images/card-lot-01.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.card_type_book{
+    background-image: url(../images/card-lot-02.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.card_type_picture{
+    background-image: url(../images/card-lot-03.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;  
+}
+.card__title{
+    color: #FFF;
+    font-size: 22px;
     font-style: normal;
     font-weight: 700;
-    line-height: 115%; /* 115px */
+    line-height: 120%; /* 26.4px */
+    text-decoration-line: underline;
     text-transform: uppercase;
     position: relative;
-    padding-top: 10px;
-    right: 40px;
-    bottom: 10px;
-    left: 10px;
+    z-index: 2;
 }
-.left{
-    font-size: 100px;
+.card__text{
+    color: #FFF;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 120%; /* 24px */
+    position: relative;
+    z-index: 2;
+}
+.lots__look-more-link{
+    text-decoration: underline;
+    padding: 30px 0 0 40px;
+    display: flex;
+    align-items: end;
+    color: #000;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-underline-position: under;
+}
+.about{
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    padding: 170px 0 0 0;
+    column-gap: 25px;
+    width: 1340px;
+    min-height: 480px;
+}
+.about__column{
+    justify-self: center;
+}
+.about__logo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #000;
+    width: 240px;
+    height: 240px;
+    border-radius: 50%;
+    grid-column: 1/2;
+  
+}
+.about__logo-image{
+    padding: 63px 46px;
+
+}
+.about__title{
+    padding: 100px 0 100px 0;
+    grid-column: 2/3;
+    font-size: 40px;
     font-style: normal;
     font-weight: 700;
-    line-height: 115%; /* 115px */
+    line-height: normal;
     text-transform: uppercase;
+}
+.about__text{
+    display: grid;
+    grid-column: 2 / 3;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+.text_indent{
+    padding: 0 0 25px 0;
+}
+.footer{
+    padding: 180px 50px 90px 50px;
+    display: grid;
+    grid-template-columns: 1fr 356px 1fr 356px 1fr;
+}
+.footer_address{
+    grid-column: 1/2;
+    font-style: normal;
+    font-size: 18px;
+    line-height: 24.3px;
+    font-weight: 400;
+}
+.footer__menu{
+    grid-column: 3 / 4;
+}
+.footer__menu-list{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+.footer__menu-list-item{
+    list-style-type: none;
+    color: #000;
+    font-size: 18px;
+    font-weight: 400;
+}
+.footer__menu-link_active{
+    text-decoration: none;
+}
+.footer__social-list{
+    grid-column: 5 / 6;
+    display: flex;
+    flex-direction: row;
+    gap: 48px;
+    justify-content: start;
+    align-items: start;
+
+}
+.footer__social-list-item{
+    list-style-type: none;
+}
+.footer__social-icon{
+    width: 48px;
+    height: 48px;
 }
