--- a/styles/style.css
+++ b/styles/style.css
@@ -1,20 +1,18 @@
-main {
+
+.content-section {
     width: 100%;
-    height: 2643px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
+    margin: 0 auto;
+  }
 .header {
     display: grid;
     grid-template-columns: 390px 206px 148px 355px 240px;
     align-items: center;
     justify-content: center;
-    padding: 92px 49px 92px 51px;
+    padding: 79px 49px 92px 66px;
 }
 .header__menu-list {
     color: #000;
-    padding: 43px 0 45px 0;
+    padding: 47px 0 45px 0;
     display: flex;
     justify-content: start;
     gap:32px;
@@ -36,7 +34,8 @@ li::marker {
     grid-column: 3 / 4;
 }
 .header__logo-image {
-    height: 105px;
+    height: 130px;
+    width: 135.5px;
 }
 .header_address {
     display: grid;
