--- a/styles/style.css
+++ b/styles/style.css
@@ -12,8 +12,9 @@
 }
 .header__menu-list {
     color: #000;
-    padding: 47px 0 45px 0;
+    padding: 48px 0 45px 0;
     display: flex;
+    flex-direction:row ;
     justify-content: start;
     gap:32px;
     text-underline-position: under;
@@ -22,11 +23,10 @@
     list-style-type: circle;
     font-size: 18px;
     white-space: nowrap;
+    word-spacing: 1px;
+    line-height: normal;
 }
-li::marker {
-    width: 7px;
-    height: 7px;
-}
+
 .header__links-list-item_no-bullit {
     list-style-type: none;
 }
