--- a/styles/global.css
+++ b/styles/global.css
@@ -6,7 +6,8 @@
 
 body {
   min-width: 1100px;
-  margin: 0;
+  margin-left: auto;
+  margin-right: auto;
   font-family: Raleway, sans-serif;
 }
 
@@ -31,4 +32,9 @@ a {
 
 img {
   width: 100%;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
 }
