--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,3 @@
-main {
-    display: flex;
-    flex-direction: column;
-    width: 1440px;
-    height: 2500px;
-}
 .content-section {
     width: 100%;
     margin: 0 auto;
@@ -12,7 +6,8 @@ main {
     display: grid;
     grid-template-columns: 390px 214px 133px 363px 248px;
     align-items: center;
-    padding: 79px 49px 83px 50px;
+    justify-content: center;
+    padding: 72px 49px 83px 50px;
 }
 .header__menu-list {
     font-family: 'Raleway', sans-serif;
@@ -66,20 +61,18 @@ main {
 
 .cover {
     position: relative;
-    z-index: -1;
-    height: 757px;
-    width: 1440px;
+    z-index: 0;
     padding: 165px 50px 50px 50px;
     background-image: url(../images/cover.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-   
+    background-position: center;  
 }
 .overlay {
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 0;
+    z-index: 1;
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.60);
@@ -111,9 +104,6 @@ main {
 .no-letter-spacing {
     letter-spacing: normal;
 }
-.remove-spacing {
-    letter-spacing: normal;
-  }
 .letter-spacing {
     letter-spacing: 60px;
 }
@@ -137,11 +127,8 @@ main {
 }
 span.words1 {
     word-spacing: 17px;
-   }
-span.words2 {
-    word-spacing: 17px;
 }
-span.words4 {
+span.words2 {
     word-spacing: 23px;
 }
 .bet-button {
@@ -173,14 +160,15 @@ span.words4 {
     list-style-type: none;
     display: flex;
     flex-direction: row;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     gap: 25px;
    
 }
 .lots__card-list-item {
     display: flex;
     width: 430px;
-    min-height: 400px;
+    min-height: 450px;
+    flex-grow: 1;
 }
 .card-link {
     display: block;
@@ -195,25 +183,20 @@ span.words4 {
     justify-content: space-between;
     padding: 50px 40px;
     height: 100%;
+    background-position: center;
 }
-.card__size {
-    width: 430px;
-    min-height: 450px;
+.card_background_property {
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 .card_type_film {
     background-image: url(../images/card-lot-01.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
 }
 .card_type_book {
     background-image: url(../images/card-lot-02.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
 }
 .card_type_picture {
     background-image: url(../images/card-lot-03.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
 }
 .card__title {
     font-family: 'Raleway', sans-serif;
