--- a/styles/style.css
+++ b/styles/style.css
@@ -160,7 +160,7 @@ span.words2 {
     list-style-type: none;
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     gap: 25px;
    
 }
